<resources>
    <string name="app_name">Enforcement</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>


    <!--Fragment4 界面-->
    <string name="my_gerenziliao">个人资料</string>
    <string name="my_daiban">待办任务</string>
    <string name="my_wanchen">完成任务</string>
    <string name="my_about">关于我们</string>
    <string name="my_fankui">意见反馈</string>


    <string name="app_version">for Android V</string>
    <string name="menu_settings">Settings</string>
    <string name="home_right_title">Categories</string>
    <string name="button_download_text">Download</string>
    <string name="button_done_text">Done</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_delete">Delete</string>
    <string name="bookmark_warning">Bookmarks attached to the magazine will be deleted simultaneously</string>
    <string name="button_ok">OK</string>
    <string name="login">Login</string>
    <string name="waiting">Please wait. . .</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>
    <string name="onsite_checked">Onsite Checked</string>
    <string name="license_verified">License Verified</string>
    <string name="share_linkedin">Share on Linkedin</string>
    <string name="share_twitter">Share on Twitter</string>
    <string name="times">Times</string>
    <string name="time">Time</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="print_test">"\n" +
                "\n" +
                "        （抽）检查２０１６第０００８期\n" +
                "\n" +
                " ＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                " 受检单位：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                " 地　　址：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                " 注  册  号：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                "\n" +
                "   基础性项目\n" +
                "\n" +
                "┌────────────────────────────────┐\n" +
                "\n│通过登记的住所或经营场所是否找到该企业? │\n" +
                "\n│                                                        　　　　　│\n" +
                "\n│检查结果：＿＿＿＿＿＿＿＿＿＿＿＿＿＿  │\n" +
                "\n│                                                        　　　　　│\n" +
                "\n│备        注：＿＿＿＿＿＿＿＿＿＿＿＿ │\n" +
                "\n└────────────────────────────────┘\n" +
                "┌────────────────────────────────┐\n" +
                "\n│通过登记的住所或经营场所是否找到该企业?           │\n" +
                "\n│                                                        　　　　　　　　 │\n" +
                "\n│检查结果：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿ │\n" +
                "\n│                                                        　　　　　　　　 │\n" +
                "\n│备        注：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿ │\n" +
                "\n└────────────────────────────────┘\n" +
                "┌────────────────────────────────┐\n" +
                "\n│通过登记的住所或经营场所是否找到该企业?           │\n" +
                "\n│                                                        　　　　　　　　 │\n" +
                "\n│检查结果：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿ │\n" +
                "\n│                                                        　　　　　　　　 │\n" +
                "\n│备        注：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿ │\n" +
                "\n└────────────────────────────────┘\n" +
                "\n" +
                " 检查人员：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                " 检查时间：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n" +
                "\n" +
                "\n" +
                " 当事人签章：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿"</string>
</resources>
