<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/huiwhite"
    android:orientation="vertical"
    tools:context=".Fragments.UserFragment">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--android:layout_height="180dp"-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:id="@+id/mtime"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:background="#a0000000"
                    android:gravity="center"
                    android:text="用户名"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <!--<com.example.a25908.partybuild.Views.RoundImageView-->
                <!--android:id="@+id/userimg"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:src="@mipmap/img"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:visibility="gone"-->
                <!--/>-->

                <!--<TextView-->
                <!--android:id="@+id/username"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="14dp"-->
                <!--android:textColor="@color/red"-->
                <!--android:text="17182"-->
                <!--android:layout_below="@+id/userimg"-->
                <!--android:layout_centerHorizontal="true" />-->
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="4"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/my1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--图标-->
                    <ImageView
                        android:id="@+id/rr1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/rr1"
                        android:text="@string/my_daiban" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/youjiantou" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/huise" />


                <RelativeLayout
                    android:id="@+id/my2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--图标-->
                    <ImageView
                        android:id="@+id/rr2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/youjiantou" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/rr2"
                        android:layout_toRightOf="@+id/rr2"
                        android:text="@string/my_wanchen" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/huise" />

                <RelativeLayout
                    android:id="@+id/my3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--图标-->
                    <ImageView
                        android:id="@+id/rr3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/rr3"
                        android:text="@string/my_gerenziliao" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/youjiantou" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/huise" />

                <RelativeLayout
                    android:id="@+id/my4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--图标-->
                    <ImageView
                        android:id="@+id/rr4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/rr4"
                        android:text="@string/my_about" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/youjiantou" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/huise" />

                <RelativeLayout
                    android:id="@+id/my5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--图标-->
                    <ImageView
                        android:id="@+id/rr5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/rr5"
                        android:text="@string/my_fankui" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/youjiantou" />
                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/huise" />

                <TextView
                    android:id="@+id/Outlogin"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/rr5"
                    android:background="@drawable/btn_bg3"
                    android:gravity="center"
                    android:text="注销"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>